Created Status and CRUD for statuses and Reservation and create for reservation
